<resources>
    <string name="app_name">Concentration</string>
    <string name="title">Concentration</string>
    <string name="playButton">Play</string>
    <string name="difficultyText">Difficulty:</string>
    <string name="difficultySpinner">Select here</string>
    <string name="tryAgainButton">Try Again</string>
    <string name="newGameButton">New Game</string>
    <string name="endGameButton">End Game</string>
    <string name="currentDifficultyText">"Difficulty: "</string>
    <string name="musicButton">Music: Off</string>
    <string name="scoreText">"Score: 0"</string>
    <string name="creditsButton">Credits</string>
    <string name="highScoresButton">High Scores</string>
    <string name="highScoresTitle">High Scores</string>
    <string name="backButton">Back</string>
    <string name="creditsTitle">Team SwingSharp</string>
    <string name="robert">Robert Berger Engle, Bronco #014011517</string>
    <string name="cynthia">Cynthia Luong, Bronco #011683490</string>
    <string name="kenneth">Kenneth Shuto, Bronco #012585989</string>
    <string name="rida">Rida Siddiqui, Bronco #014147900</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>